--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   justify-content: center;
   height:100vh;
   font-family: 'Rubik', sans-serif;
-  columns: #78909c;
+  color: #78909c;
   background: linear-gradient(
     135deg,
     rgba(179, 229, 252, 1) 0%,
